{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 71,
  "lineage": "92472293-60fb-7995-c26f-b1679814ebcc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-14T12:31:43.828-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/otel-agent-dev/global/firewalls/active-directory-sample-app-fw-allow-http",
            "log_config": [],
            "name": "active-directory-sample-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc",
            "priority": 1000,
            "project": "otel-agent-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/firewalls/active-directory-sample-app-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-14T12:31:43.729-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/otel-agent-dev/global/firewalls/active-directory-sample-app-fw-allow-rdp",
            "log_config": [],
            "name": "active-directory-sample-app-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc",
            "priority": 1000,
            "project": "otel-agent-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/firewalls/active-directory-sample-app-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2019-dc-v20231213",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/zones/us-central1-a/disks/windows-active-directory-sample-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "windows-active-directory-vm.sampleapp.com",
            "id": "projects/otel-agent-dev/zones/us-central1-a/instances/windows-active-directory-sample-app",
            "instance_id": "6231146334373992618",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "sysprep-specialize-script-ps1": "# Set password for local admin account.\n$adminPassword = ConvertTo-SecureString \"AdminPassword123!\" -AsPlainText -Force\nSet-LocalUser -Name \"Administrator\" -Password $adminPassword\n\n# Install windows exporter for grafana\nInvoke-WebRequest -Uri \"https://github.com/grafana/agent/releases/download/v0.38.1/grafana-agent-windows-amd64.exe.zip\" -OutFile \"grafana-agent-windows-amd64.exe.zip\"\nExpand-Archive -LiteralPath \"grafana-agent-window [...]
            },
            "metadata_fingerprint": "qtepVW725OI=",
            "name": "windows-active-directory-sample-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.56.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc",
                "network_ip": "10.10.15.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/regions/us-central1/subnetworks/active-directory-sample-app-subnet",
                "subnetwork_project": "otel-agent-dev"
              }
            ],
            "project": "otel-agent-dev",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/zones/us-central1-a/instances/windows-active-directory-sample-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "rdp"
            ],
            "tags_fingerprint": "uNQmwx3n-wk=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc",
            "mtu": 0,
            "name": "active-directory-sample-app-terraform-vpc",
            "project": "otel-agent-dev",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-14T12:31:43.843-08:00",
            "gateway_address": "10.10.15.1",
            "id": "projects/otel-agent-dev/regions/us-central1/subnetworks/active-directory-sample-app-subnet",
            "ip_cidr_range": "10.10.15.0/24",
            "name": "active-directory-sample-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/global/networks/active-directory-sample-app-terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "otel-agent-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otel-agent-dev/regions/us-central1/subnetworks/active-directory-sample-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}